--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -24,42 +24,57 @@
     padding-bottom: 20px;
     font-size: 16px;
     min-height: 700px;
-}
-#prepare-content .prepare-list{
-    margin:10px 0;
-}
-#prepare-content .list-header{
-    line-height: 40px;
-    background: #A9DCEA;
-    padding:3px 10px;
-    cursor: pointer;
-}
-#prepare-content .list-header-title{
-    color: #0094CE;
-    font-size: 18px;
-}
 
-#prepare-content .list-header i{
-    color: #0094CE;
-    margin:0 5px;
-    font-size: 20px;
-}
-#prepare-content .list-header i:hover{
-    color: #26A3D5;
-}
-#prepare-content .list-header .edit-prepare{
-    margin-left: 60px;
-}
+    .prepare-list{
+        margin:10px 0;
+    }
 
-#prepare-content .new-prepare-title input{
-    height: 30px;
-    line-height: 30px;
-    margin-right: 15px;
-    width: 160px;
-    padding: 5px 10px;
-    font-size: 1.4rem;
-    border: 1px solid #3FBBCF;
-    border-radius: 6px;
+    .list-header{
+        line-height: 40px;
+        background: #A9DCEA;
+        padding:3px 10px;
+        cursor: pointer;
+    }
+
+    .list-header-title{
+        color: #0094CE;
+        font-size: 18px;
+    }
+
+    .list-header i{
+        color: #0094CE;
+        margin:0 5px;
+        font-size: 20px;
+    }
+
+    .list-header i:hover{
+        color: #26A3D5;
+    }
+
+    .list-header .edit-prepare{
+        margin-left: 60px;
+    }
+
+
+    .new-prepare-title input{
+        height: 30px;
+        line-height: 30px;
+        margin-right: 15px;
+        width: 160px;
+        padding: 5px 10px;
+        font-size: 1.4rem;
+        border: 1px solid #3FBBCF;
+        border-radius: 6px;
+    }
+
+    .list-content .list-item-thumb {
+        margin-left: 10px;
+    }
+
+    input[type=checkbox] + label {
+        left: 0;
+    }
+
 }
 
 .btn-op {
