--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -12,12 +12,13 @@
 		<div class="list-content" ng-show="list.active">
 			<div ng-show="list.children.length>0">
 				<span class="hold-on" ui-sref="systemres"><i class="icon-plus-sign"></i>继续逛逛</span>
-				<span class="local-res" ng-click="uploadRes"><i class="icon-plus-sign"></i>本地资源</span>
+				<span class="local-res" ng-click="uploadRes()"><i class="icon-plus-sign"></i>本地资源</span>
 				<div class="clearfix">
 					
 				</div>
 				<div class="list-item" ng-repeat="item in list.children">
-					<input type="checkbox"/>
+						<input id="{{parentIndex*10+$index}}" type="checkBox" class="check" ng-click="selectRes(item)" ng-checked="item.isSelected">
+						<label for="{{parentIndex*10+$index}}"></label>
 					<img class="list-item-thumb" ng-src="{{item.imgPath?item.imgPath:'null'}}" fallback-src="{{item.fileSuffix | lowercase}}" ng-click="previewRes(item)"/>
 					<div class="item-info">
 						<span class="item-info-title">{{item.title}}</span><br>
