--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -21,12 +21,12 @@
 				<div class="upload-tips">
 					<p class="upload-tips-icon"><i class="icon-exclamation-sign"></i> 支持格式：</p>
 					<div class="upload-tips-text">
-						<p>图片：jpg、gif、jpeg、png、bmp，限制5M;</p>
-						<p>文本：doc/docx、ppt/pptx、xls/xlsx、pdf/txt，限制30M;</p>
-						<p>动画：swf，限制30M；</p>
-						<p>音频：mp3、wma、wav，限制30M；</p>
-						<p>视频：mp4、flv，限制150M；</p>
-						<p>压缩包：rar、zip，限制100M.</p>
+						<p>图片：.jpg、.gif、.png，最大5M;</p>
+						<p>文本：.doc/.docx/.dot/.dotm/.docm、.ppt/.pptx/.pot/.potm/.pptm、.xls/.xlsx/.xlsm、.pdf/.txt/.caj/.kdh/.teb，最大30M;</p>
+						<p>动画：.swf、.gsp(几何画板)，最大10M；</p>
+						<p>音频：.mp3、.wma、.wav，最大10M；</p>
+						<p>视频：.mp4（其他格式请用格式工厂类软件转为mp4）最大150M；</p>
+						<p>压缩包：.rar、.zip，最大100M。</p>
 					</div>
 				</div>
 				<div class="upload-tips upload-tips-custom">
