--- a/src/less/res.less
+++ b/src/less/res.less
@@ -403,7 +403,7 @@
 .res-type{
     margin-left: 5px;
 }
-.res-size,.res-uploader{
+.res-size, .res-time, .res-uploader{
     margin-left: 15px;
 }
 
@@ -447,7 +447,7 @@
 }
 .res-list-tools{
     float: right;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 .res-select{
     background: @color5;
@@ -502,9 +502,9 @@
 .res-prepare-list{
     position: absolute;
     right: 36px;
-    top:72px;
+    top:67px;
     background: #fff;
-    padding: 10px 20px;
+    padding: 5px 20px;
     display: none;
     color: #999;
     min-width: 100px;
@@ -644,7 +644,7 @@
     padding: 5px 15px;
     line-height: 20px;
     color: #2B2C2C;
-    margin-top: 15px;
+    margin-top: 30px;
     position: relative;
     margin-left: 15px;
 }
