--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -12,7 +12,7 @@
 		<div class="list-content" ng-show="list.active">
 			<div ng-show="list.children.length>0">
 				<span class="hold-on" ui-sref="systemres"><i class="icon-plus-sign"></i>继续逛逛</span>
-				<span class="local-res" ng-click="uploadRes()"><i class="icon-plus-sign"></i>本地资源</span>
+				<span class="local-res" ng-click="uploadRes(list.id)"><i class="icon-plus-sign"></i>本地资源</span>
 				<div class="clearfix">
 					
 				</div>
@@ -51,7 +51,7 @@
 			<div class="list-item list-no-res" ng-show="list.children.length == 0">
 				<img src="assets/img/prepare/add_res.png" />
 				<i ui-sref="systemres">系统资源</i>
-				<i ng-click="uploadRes()">本地资源</i>
+				<i ng-click="uploadRes(list.id)">本地资源</i>
 				<!-- 上传模态框 -->
 				<div data-ng-include="'/coms/layout/modal/modal/upload-modal.html'"></div>
 			</div>
