--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -239,7 +239,7 @@
 				</div>
 				<div class="edit-list">
 					<div style="float: left;">
-						<span class="red-tip">*</span>
+						<span class="red-tip">&nbsp;&nbsp;</span>
 						<span class="sp-label">资源介绍:</span>
 					</div>
 					<textarea class="des-editor" ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
