--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -2,7 +2,7 @@
 // 单独出来，相对独立
 .upload-modal .modal-dialog{
     width: 900px;
-    height: 700px;
+    height: 720px;
 }
 .upload-modal-body{
     width: 900px;
@@ -10,8 +10,7 @@
     text-align: left;
     color: #666;
     font-size: 15px;
-    max-height: 800px;
-//  overflow-y: auto;
+    height: 720px;
 }
 .upload-file-content, .upload-network-content{
     background: #fff;
@@ -29,8 +28,8 @@
 }
 .upload-modal .edit-upload-res{
     padding: 15px 40px;
-    max-height: 600px;
-    overflow-y: auto;
+//  max-height: 700px;
+//  overflow-y: auto;
 }
 .upload-modal .edit-upload-res table{
     width: 70%;
