--- a/src/less/res.less
+++ b/src/less/res.less
@@ -492,8 +492,16 @@
     cursor: pointer;
 }
 .noDataCtrl{
-    text-align: center;
-    padding: 150px 50px;
+    text-align: left;
+    margin: 100px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 150px;
+    padding-top: 280px;
+    padding-left: 100px;
+    height: 520px;
+    color: #34b193;
+    background: url('assets/img/not_found.png') no-repeat;
 }
 // 列出备课夹
 .addPrepare:hover .res-prepare-list,.addPrepare:hover .res-prepare-thumb,.addPrepareAll:hover .res-prepare-all{
