--- a/src/coms/layout/views/res/res-content.html
+++ b/src/coms/layout/views/res/res-content.html
@@ -1,6 +1,6 @@
 <div class="res-content-header"></div>
 <div id="res-content-right">
-	<div class="res-header-catogry">
+	<div class="res-header-catogry" ng-show="fromFlag==0">
 		<span class="catogry-item" ng-repeat="v in pools track by $index" ng-class="{'catogry-item-active':isPoolActive(v.id)}" ng-click="typeAndFormat($index,0)">{{v.name}}</span>
 	</div>
 	<div class="res-header-type">
