--- a/src/less/res.less
+++ b/src/less/res.less
@@ -575,6 +575,7 @@
     min-width: 100px;
     z-index: 99999;
     border: 2px solid #41C9A9;
+    font-size: 14px;
 }
 // 备课夹 悬浮
 .prepare-fixed{
@@ -583,6 +584,10 @@
     right: 5px;
     cursor: pointer;
     z-index: 99999;
+}
+// 备课夹 资源数量
+.prepare-num{
+    color: #E78024;
 }
 @media screen and (max-width: 1400px) { /*当屏幕尺寸小于1050px时，应用下面的CSS样式*/
      .prepare-fixed{
