--- a/src/coms/layout/views/prepare/prepare-add.html
+++ b/src/coms/layout/views/prepare/prepare-add.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="prepare-ctrls">
 		<div class="ctrls-prepare-list">
-			<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index">{{$index+1}}、{{item.title}} ({{item.contentNumber}})</div>
+			<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index">{{$index+1}}、{{item.title}} <span class="prepare-num">({{item.contentNumber}})</span></div>
 			<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>
 		</div>
 	</div>
