--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -242,8 +242,7 @@
 						<span class="red-tip">&nbsp;&nbsp;</span>
 						<span class="sp-label">资源介绍:</span>
 					</div>
-					<textarea class="des-editor" ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
-    			</textarea>
+					<textarea class="des-editor" ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字"></textarea>
 					<!--<span class="sp-count-word"><span ng-model="res.description.length"></span>/200</span>-->
 				</div>
 			</div>
