--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -12,7 +12,7 @@
 		<div class="list-content" ng-show="list.active">
 			<div ng-show="list.children.length>0">
 				<span class="hold-on" ui-sref="systemres"><i class="icon-plus-sign"></i>继续逛逛</span>
-				<span class="local-res" ng-click="uploadRes(list.id)"><i class="icon-plus-sign"></i>本地资源</span>
+				<span class="hold-on local-res" ng-click="uploadRes(list.id)"><i class="icon-plus-sign"></i>本地资源</span>
 				<div class="clearfix">
 					
 				</div>
@@ -22,7 +22,7 @@
 					<img class="list-item-thumb" ng-src="{{item.imgPath?item.imgPath:'null'}}" fallback-src="{{item.fileSuffix | lowercase}}" ng-click="previewRes(item)"/>
 					<div class="item-info">
 						<span class="item-info-title">{{item.title}}</span><br>
-						<span class="item-info-type">类型: {{item.unifyType}}</span>
+						<span class="item-info-type">类型: {{item.unifyType}}</span><br>
 						<res-size data-value="{{item.size}}"></res-size>
 					</div>
 					<div class="prepare-download">
