搜索页关键字处理

--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -49,7 +49,7 @@
 					
 					<span class="star_box">
 						<label class="res-star">
-							<i class="icon-star" ng-repeat="star in source.starNum" ></i>
+							<i class="icon-star star-active" ng-repeat="star in source.starNum" ></i>
 							
 						</label>
 						<label class="res-number">{{source.clickTimes}}浏览/{{source.dloadTimes}}下载</label>
