--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -110,6 +110,7 @@
 					</tr>
 				</table>
 			</div>
+			<span class="sp-label">为方便资源的管理，请填写完整的资源信息</span>
 			<!--<span class="upload-all" ng-class="addAll? 'add-active':''" ng-click="addAll=true">方式一： 为资源添加统一的信息</span>
 			<span class="upload-onebyone" ng-class="!addAll? 'add-active':''" ng-click="addAll=false">方式二： 为每个资源单独添加信息</span>-->
 
