--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -2,15 +2,14 @@
 // 单独出来，相对独立
 .upload-modal .modal-dialog{
     width: 900px;
-    height: 720px;
+    height: 650px;
 }
 .upload-modal-body{
     width: 900px;
-    min-height: 500px;
     text-align: left;
     color: #666;
     font-size: 15px;
-    height: 720px;
+    height: 650px;
 }
 .upload-file-content, .upload-network-content{
     background: #fff;
@@ -108,7 +107,7 @@
     float: left;
 }
 .upload-modal .item-right{
-    width: 85%;
+    width: 88%;
     margin-top: 5px;
 }
 .upload-modal .type-item{
@@ -148,4 +147,16 @@
 }
 .upload-url-input{
     width: 300px;
+}
+.upload-modal .edit-detail-box input{
+    width: 400px;
+    border-radius: 2px;
+    border: none;
+    padding: 3px;
+}
+.upload-modal .edit-detail-box textarea{
+    height: 150px;
+    width: 600px;
+    border: none;
+    border-radius: 2px;
 }
