--- a/src/less/res.less
+++ b/src/less/res.less
@@ -525,7 +525,7 @@
 .res-prepare-thumb .res-prepare-list-item{
     margin: 0;
 }
-.res-prepare-list-item:hover{
+.res-prepare-list-item:hover,.prepareList li:hover{
     text-decoration: underline;
     color: #0094CE;
 }
@@ -547,6 +547,7 @@
     font-size: 14px;
     border: 2px solid #41C9A9;
 }
+
 .addPrepare-custom{
     width: 100px;
     float: right;
