--- a/src/coms/personal-center/views/my-upload.html
+++ b/src/coms/personal-center/views/my-upload.html
@@ -12,7 +12,7 @@
     			<span class="red-tip">*</span>
     			<span class="sp-label">资源名称</span>
     			<input type="text" ng-model="res.title" />
-    			<button class="btn-op" ng-click="setResTitle(res.title)">确定</button>
+    			<button class="btn-op" ng-click="setResTitle(res.title)">重新上传</button>
     		</div>
     		<div class="edit-list">
     			<span class="red-tip">*</span>
